--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,10 +1,8 @@
 footer {
-  bottom: 0;
   display: flex;
   justify-content: center;
-  left: 0;
   padding: 50px 0;
-  position: absolute;
+  position: relative;
   width: 100%;
   background: #dbd5c9;
 }
